@@ -26,7 +26,6 @@ import com.thoughtworks.go.validation.Validator;
 import org.apache.commons.lang3.StringUtils;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static java.lang.String.format;
 
@@ -292,7 +291,7 @@ public class User extends PersistentObject {
     }
 
     public void removeNotificationFilter(final long filterId) {
-        List<NotificationFilter> toBeDeleted = notificationFilters.stream().filter(filter1 -> filter1.getId() == filterId).collect(Collectors.toList());
+        List<NotificationFilter> toBeDeleted = notificationFilters.stream().filter(filter1 -> filter1.getId() == filterId).toList();
         notificationFilters.removeAll(toBeDeleted);
     }
 
